force-app/main/default/objects/My_Path__c/My_Path__c.object-meta.xml
<CustomObject>
    <description>Contains paths assigned to associates</description>
    <label>My Path</label>
    <nameField>
        <label>My Path Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>