force-app/main/default/objects/My_Path__c/fields/Associate__c.field-meta.xml
<CustomField>
    <fullName>Associate__c</fullName>
    <description>Individual on this learning path</description>
    <inlineHelpText>Individual on this learning path</inlineHelpText>
    <label>Associate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Paths</relationshipLabel>
    <relationshipName>My_Paths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>