force-app/main/default/objects/My_Path__c/fields/Completion_Level__c.field-meta.xml
<CustomField>
    <fullName>Completion_Level__c</fullName>
    <description>Percentage of steps that have been completed along the path</description>
    <formula>Step_Completion_Count__c /  Step_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of steps that have been completed along the path</inlineHelpText>
    <label>Completion Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>