force-app/main/default/objects/My_Path__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Path the associate is on</description>
    <inlineHelpText>Path the associate is on</inlineHelpText>
    <label>Path</label>
    <referenceTo>Path__c</referenceTo>
    <relationshipLabel>My Paths</relationshipLabel>
    <relationshipName>My_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>