force-app/main/default/objects/My_Path__c/fields/Step_Completion_Count__c.field-meta.xml
<CustomField>
    <fullName>Step_Completion_Count__c</fullName>
    <description>Number of steps along this path that have been completed</description>
    <inlineHelpText>Number of steps along this path that have been completed</inlineHelpText>
    <label>Step Completion Count</label>
    <summaryFilterItems>
        <field>My_Step__c.Status__c</field>
        <operation>equals</operation>
        <value>Outa Here</value>
    </summaryFilterItems>
    <summaryForeignKey>My_Step__c.My_Path__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>