force-app/main/default/objects/My_Path__c/fields/Step_Count__c.field-meta.xml
<CustomField>
    <fullName>Step_Count__c</fullName>
    <description>Number of steps along this path</description>
    <inlineHelpText>Number of steps along this path</inlineHelpText>
    <label>Step Count</label>
    <summaryForeignKey>My_Step__c.My_Path__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>