force-app/main/default/objects/My_Path__c/fields/Test_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Test_Picklist__c</fullName>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Step_Picklist</valueSetName>
    </valueSet>
</CustomField>