force-app/main/default/objects/My_Path__c/listViews/My_Assigned_Paths.listView-meta.xml
<ListView>
    <fullName>My_Assigned_Paths</fullName>
    <columns>Discipline__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Assigned Paths</label>
</ListView>